Change value to placeholder

--- a/travel_reservation.html
+++ b/travel_reservation.html
@@ -11,10 +11,10 @@
     <h1>Travel Reservation Form</h1><hr>
     <p><b><h3>* denotes mandatory</h3></b></p><br>
     <label for="name">Full Name *:</label><br>
-    <input id="name" type="text" name="name" value="FirstName LastName" required/><br><br>
+    <input id="name" type="text" name="name" placeholder="FirstName LastName" required/><br><br>
 
     <label for="email">Email Address *:</label><br>
-    <input id="email" type="text" name="email" value="EMAIL_ADDRESS" required/><br><br>
+    <input id="email" type="text" name="email" placeholder="EMAIL_ADDRESS" required/><br><br>
 
     <label for="package">Select Tour Package *:</label><br>
     <select id="package" name="package" required>
@@ -24,10 +24,10 @@
     </select><br><br>
 
     <label for="arrival">Arrival Date *:</label><br>
-    <input type="date" id="arrival" name="arrival" required><br><br>
+    <input type="date" id="arrival" name="arrival" placeholder="mm/dd/yyyy" required><br><br>
 
     <label for="num">Number of Persons *:</label><br>
-    <input id="num" type="number" name="num" value="1" min="1" max="10" required /><br><br>
+    <input id="num" type="number" name="num" placeholder="UNKNOWN_TYPE" required /><br><br>
 
     <form>
         <div>What would you like to avail? *:</div>
@@ -42,7 +42,7 @@
     </form>
     
     <br><label for="discount">Discount Coupon Code :</label><br>
-    <input type="number" id="discount" name="discount" value="000000" required><br><br>
+    <input type="number" id="discount" name="discount" placeholder="UNKNOWN_TYPE" required><br><br>
 
     <form>
         <div>Terms and Conditions *</div>
