Add checked to form

--- a/travel_reservation.html
+++ b/travel_reservation.html
@@ -46,7 +46,7 @@
 
     <form>
         <div>Terms and Conditions *</div>
-        <input type="radio" id="agree" name="answer" value="I agree">
+        <input type="radio" id="agree" name="answer" value="I agree" checked>
         <label for="agree">I agree</label>
         <input type="radio" id="disagree" name="answer" value="I disagree">
         <label for="disagree">I disagree</label>
